Updated demo python notebook

--- a/src/common/python/notebooks/Docker_PostGIS_CLiCC_Demo_Filled.ipynb
+++ b/src/common/python/notebooks/Docker_PostGIS_CLiCC_Demo_Filled.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to PostGIS Database\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###########################################################################\n",
     "# Package Imports and Database Connection Settings\n",
@@ -43,9 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -128,17 +120,17 @@
     "queryLF = \"\"\"\n",
     "    SELECT huc, \n",
     "    (ST_ValueCount(ST_Union(ST_Clip(rast,geom)))).*\n",
-    "       INTO counts \n",
+    "       INTO cat_counts \n",
     "       FROM landuse, catchments \n",
     "       GROUP BY huc; \n",
     "    SELECT huc, value, count, \n",
     "    (SUM(count) OVER (PARTITION BY huc)) AS sum \n",
-    "        INTO counts_sum \n",
-    "        FROM counts;\n",
+    "        INTO cat_counts_sum \n",
+    "        FROM cat_counts;\n",
     "    SELECT huc, value, count, \n",
     "    (@ST_ScaleX(rast) * @ST_ScaleY(rast) * (CAST(count AS float))) AS area, \n",
     "    (CAST(count AS float) / CAST(sum AS float)) AS fraction\n",
-    "        FROM landuse, counts_sum\n",
+    "        FROM landuse, cat_counts_sum\n",
     "        ORDER BY huc, count;\n",
     "\"\"\"\n",
     "\n",
@@ -151,9 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -193,9 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -285,17 +277,17 @@
     "        GROUP BY huc, muid, catchments.geom, soils.geom;\n",
     "    SELECT huc, muid, \n",
     "    (ST_ValueCount(ST_Union(ST_Clip(rast,int_geom)))).* AS counts\n",
-    "        INTO counts\n",
+    "        INTO soils_counts\n",
     "        FROM landuse, soils_int\n",
     "        GROUP BY huc, muid;\n",
     "    SELECT huc, muid, value, count, \n",
     "    (SUM(count) OVER (PARTITION BY muid)) AS sum \n",
-    "        INTO counts_sum \n",
-    "        FROM counts;\n",
+    "        INTO soils_counts_sum \n",
+    "        FROM soils_counts;\n",
     "    SELECT huc, muid, value, count, \n",
     "    (@ST_ScaleX(rast) * @ST_ScaleY(rast) * (CAST(count AS float))) AS area, \n",
     "    (CAST(count AS float) / CAST(sum AS float)) AS fraction\n",
-    "        FROM landuse, counts_sum\n",
+    "        FROM landuse, soils_counts_sum\n",
     "        ORDER BY huc, muid, count;\n",
     "\"\"\"\n",
     "\n",
@@ -305,6 +297,15 @@
     "# Print data frame contents\n",
     "print(SG)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
